--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tesseract (4.00~git2219-40f43111-1.2) unstable; urgency=medium
+
+  * Sponsored upload
+
+ -- Jeff Breidenbach <jab@debian.org>  Mon, 26 Feb 2018 20:23:19 -0800
+
 tesseract (4.00~git2219-40f43111-1) unstable; urgency=medium
 
   * Compile
