--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tesseract (4.00~git2439-c3ed6f03-2) unstable; urgency=medium
+
+  * Added dependency on tesseract-ocr-grc
+  * Added dependency on tesseract-ocr-kmr
+  * Remove dependency on tesseract-ocr-kur-ara.
+
+ -- Alexander Pozdnyakov <almipo@mail.ru>  Mon, 07 May 2018 20:42:17 +0300
+
 tesseract (4.00~git2439-c3ed6f03-1) unstable; urgency=medium
 
   * Compile
