--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,14 @@
-tesseract (4.1.0-1) unstable; urgency=medium
+tesseract (4.1.0-3) unstable; urgency=medium
+
+  * Update debian/control:
+    - delete build dependency from autoconf-archive
+    - add build dependency on libarchive-dev
+    - add dependency on tesseract-ocr-equ for tesseract-ocr-all
+  * Bump Standards-Version to 4.4.1
+
+ -- Alexander Pozdnyakov <almipo@mail.ru>  Wed, 02 Oct 2019 21:50:47 +0300
+
+tesseract (4.1.0-2) unstable; urgency=medium
 
   * New upstream release.
   * disable patch - man.diff
