--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ tesseract (4.1.0-3) unstable; urgency=medium
     - delete build dependency from autoconf-archive
     - add build dependency on libarchive-dev
     - add dependency on tesseract-ocr-equ for tesseract-ocr-all
+    - update dependency libtesseract4 for tesseract-ocr (closes: #942760)
   * Bump Standards-Version to 4.4.1
 
  -- Alexander Pozdnyakov <almipo@mail.ru>  Wed, 02 Oct 2019 21:50:47 +0300
