--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+tesseract (4.1.1-2) unstable; urgency=medium
+
+  * Update debian/control:
+    - add build dependency from autoconf-archive (closes: #949119)
+    - add dependency libarchive-dev for libtesseract-dev (closes: #949140)
+
+ -- Alexander Pozdnyakov <almipo@mail.ru>  Sun, 19 Jan 2020 08:48:59 +0300
+
 tesseract (4.1.1-1) unstable; urgency=medium
 
   * New upstream release.
