--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+tesseract (5.1.0-2) unstable; urgency=medium
+
+  * Update debian/control:
+    - add dependency 'libcurl4-dev | libcurl4-gnutls-dev' for
+      libtesseract-dev (closes: #1012242)
+    - update dependency for tesseract-ocr
+    - update 'breaks' for libtesseract5
+  * disable NEON instructions for architecture armel (closes: #1012254)
+
+ -- Alexander Pozdnyakov <almipo@mail.ru>  Thu, 02 Jun 2022 22:56:14 +0300
+
 tesseract (5.1.0-1) unstable; urgency=medium
 
   * New upstream release.
