--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 tesseract (5.3.0-2) unstable; urgency=medium
 
   * Bump debhelper version to 11
-  * update patch - disable_NEON
+  * Update patch - disable_NEON
+  * Update debian/rules
 
  -- Alexander Pozdnyakov <almipo@mail.ru>  Mon, 09 Jan 2023 19:45:54 +0000
 
