--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,28 @@
+tesseract (5.3.4-1.3) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * (Closes: #1081970), leptonlib transition
+
+ -- Jeff Breidenbach <jab@debian.org>  Sat, 05 Oct 2024 02:55:57 +0000
+
+tesseract (5.3.4-1.1) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * Remove B-D on libjpeg-dev, libtiff-dev and git, removed in 5.3.0-2 but
+    reintroduced in 5.3.3-1 (Closes: #980991).
+
+ -- Andrey Rakhmatullin <wrar@debian.org>  Wed, 20 Mar 2024 11:45:47 +0500
+
+tesseract (5.3.4-1) unstable; urgency=medium
+
+  * New upstream release
+  * Update debian/copyright:
+    -  Updated year
+  * Update upstream/metadata:
+    -  Unknown field deleted - Homepage
+
+ -- Alexander Pozdnyakov <almipo@mail.ru>  Thu, 18 Jan 2024 20:00:18 +0000
+
 tesseract (5.3.3-1) unstable; urgency=medium
 
   * New upstream release
