--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-tesseract (5.3.4-1.3) unstable; urgency=medium
+tesseract-lept5 (5.3.4-1.3) unstable; urgency=medium
 
   * Non-maintainer upload.
   * (Closes: #1081970), leptonlib transition
