--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+tesseract (5.5.0-1) unstable; urgency=medium
+
+  * New upstream release
+  * update patch - helptext
+
+ -- Alexander Pozdnyakov <almipo@mail.ru>  Mon, 11 Nov 2024 09:46:57 +0000
+
+tesseract (5.3.4-1.4) unstable; urgency=medium
+
+  * Non-maintainer upload.
+  * No changes; just poking MIPS and RISC-V autobuilders.
+
+ -- Jeff Breidenbach <jab@debian.org>  Sun, 06 Oct 2024 13:41:00 -0700
+
 tesseract (5.3.4-1.3) unstable; urgency=medium
 
   * Non-maintainer upload.
